added to styling

--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="Description" content="Home Page"/>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Varela Round">
     <title>David Kruggel</title>
   </head>
   <body>
+    <h1>David Kruggel</h1>
+
+    <h2>CS student  software dev</h2>
+
+    <div class="nav">
+      <a>Menu</a>
+    </div>
   </body>
 </html>
