added js folder, improved styling

--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Varela Round">
+    <script type="text/javascript" src="js/main.js"></script>
     <title>David Kruggel</title>
   </head>
   <body>
-    <h1>David Kruggel</h1>
-
-    <h2>CS student  software dev</h2>
-
     <div class="nav">
-      <a>Menu</a>
+      <a class="button">Menu</a>
     </div>
+
+    <h1 style="text-align: center;">David Kruggel</h1>
+
+    <h2 style="text-align: center;">cs student<br>software dev</h2>
+
   </body>
 </html>
