--- a/index.html
+++ b/index.html
@@ -19,4 +19,5 @@
     <h2 style="text-align: center;">cs student<br>software dev</h2>
 
   </body>
+  <script type='application/javascript' src='https://darksky.net/widget/default/38.8381,-90.7249/us12/en.js?width=100%&height=350&title=Home&textColor=333333&bgColor=transparent&transparency=true&skyColor=undefined&fontFamily=Default&customFont=&units=us&htColor=333333&ltColor=C7C7C7&displaySum=yes&displayHeader=yes'></script>
 </html>
