--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
   </head>
   <body>
     <div class="nav">
-      <a class="button">Menu</a>
-      <script type='application/javascript' src='https://darksky.net/widget/default/38.8381,-90.7249/us12/en.js?width=100%&height=350&title=Home&textColor=333333&bgColor=transparent&transparency=true&skyColor=undefined&fontFamily=Default&customFont=&units=us&htColor=333333&ltColor=C7C7C7&displaySum=yes&displayHeader=yes'></script>
+      <div class="buttons">
+        <a class="button">Menu</a>
+      </div>
+      <h1 style="text-align: center;width: 100%;">David Kruggel</h1>
+      <div class="weather">        
+        <script type='application/javascript' src='https://darksky.net/widget/default-small/38.8381,-90.7249/us12/en.js?width=100%&height=70&title=Full Forecast&textColor=333333&bgColor=transparent&transparency=true&skyColor=undefined&fontFamily=Default&customFont=&units=us'></script>
+      </div>
     </div>
-
-    <h1 style="text-align: center;">David Kruggel</h1>
 
     <h2 style="text-align: center;">cs student<br>software dev</h2>
 
