--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <body>
     <div class="nav">
       <a class="button">Menu</a>
+
+      <p id="time" style="text-align: right;"></p>
     </div>
 
     <h1 style="text-align: center;">David Kruggel</h1>
