Added some styling

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <li class="buttons">
         <a class="button">Menu</a>
       </li>
-      <h1 style="text-align: center;">David Kruggel</h1>
-      <li class="weather">        
+      <!-- <h1 style="text-align: center;">David Kruggel</h1> -->
+      <li class="weather">
         <script type='application/javascript' src='https://darksky.net/widget/default-small/38.8381,-90.7249/us12/en.js?width=100%&height=70&title=Full Forecast&textColor=333333&bgColor=transparent&transparency=true&skyColor=undefined&fontFamily=Default&customFont=&units=us'></script>
       </li>
     </ul>
