--- a/index.html
+++ b/index.html
@@ -10,26 +10,23 @@
     <title>David Kruggel</title>
   </head>
   <body>
-    <!-- <div class="nav">
-      <div class="buttons">
-        <a class="button">Menu</a>
+    <div class="nav">
+      <div class="nav_container">
+        <ul class="nav_left">
+        <li class="buttons">
+          <a class="button">Menu</a>
+        </li>
+        <li style="align-self: center;width: 100%;">
+          <h1>David Kruggel</h1>
+        </li>
+        <li class="weather">
+          <script type='application/javascript' src='https://darksky.net/widget/default-small/38.8381,-90.7249/us12/en.js?width=100%&height=70&title=Full Forecast&textColor=333333&bgColor=transparent&transparency=true&skyColor=undefined&fontFamily=Default&customFont=&units=us'></script>
+        </li>
+      </ul>
       </div>
-      <h1 style="text-align: center;width: 100%;">David Kruggel</h1>
-      <div class="weather">        
-        <script type='application/javascript' src='https://darksky.net/widget/default-small/38.8381,-90.7249/us12/en.js?width=100%&height=70&title=Full Forecast&textColor=333333&bgColor=transparent&transparency=true&skyColor=undefined&fontFamily=Default&customFont=&units=us'></script>
-      </div>
-    </div> -->
-    <ul class="nav">
-      <li class="buttons">
-        <a class="button">Menu</a>
-      </li>
-      <!-- <h1 style="text-align: center;">David Kruggel</h1> -->
-      <li class="weather">
-        <script type='application/javascript' src='https://darksky.net/widget/default-small/38.8381,-90.7249/us12/en.js?width=100%&height=70&title=Full Forecast&textColor=333333&bgColor=transparent&transparency=true&skyColor=undefined&fontFamily=Default&customFont=&units=us'></script>
-      </li>
-    </ul>
-
-    <h2 style="text-align: center;">cs student<br>software dev</h2>
+    </div>
+    
+    <!-- <h2 style="text-align: center;">cs student<br>software dev</h2> -->
 
   </body>
 </html>
