--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
           <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
-          </li>
+          </li> -->
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
+              Links
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="https://www.github.com/dkruggel" target="_blank">Github</a>
+              <a class="dropdown-item" href="https://www.linkedin.com/in/david-kruggel-ba56aa1b/" target="_blank">LinkedIn</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Contact Me</a>
             </div>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
+          </li> -->
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -55,7 +55,7 @@
           <div class="card-body">
             <h5 class="card-title">Web Development</h5>
             <p class="card-text">I like to build responsive web pages and web apps</p>
-            <a href="#" class="card-link">Github</a>
+            <a href="https://www.github.com/dkruggel" target="_blank" class="card-link">Github</a>
             <a href="#" class="card-link">Another link</a>
           </div>
         </div>
@@ -64,7 +64,7 @@
           <div class="card-body">
             <h5 class="card-title">.net Development</h5>
             <p class="card-text">I enjoy writing native desktop apps in c# using .net core</p>
-            <a href="#" class="card-link">Github</a>
+            <a href="https://www.github.com/dkruggel" target="_blank" class="card-link">Github</a>
             <a href="#" class="card-link">Another link</a>
           </div>
         </div>
@@ -73,7 +73,7 @@
         <div class="card-body">
           <h5 class="card-title">Certifications</h5>
           <p class="card-text">I hold several industry certifications</p>
-          <a href="#" class="card-link">LinkedIn</a>
+          <a href="https://www.linkedin.com/in/david-kruggel-ba56aa1b/" target="_blank" class="card-link">LinkedIn</a>
           <a href="#" class="card-link">Another link</a>
         </div>
       </div>
