--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <section>
       <div class="card-deck" style="width: 100%;padding: 2rem">
-        <div class="card text-center text-white bg-dark mb-3" style="min-height: 15rem;">
+        <div class="card text-center text-white bg-dark mb-3">
           <div class="card-body">
             <h5 class="card-title">Web Development</h5>
             <p class="card-text">I like to build responsive web pages and web apps</p>
@@ -60,7 +60,7 @@
           </div>
         </div>
         
-        <div class="card text-center text-white bg-dark mb-3" style="min-height: 15rem;">
+        <div class="card text-center text-white bg-dark mb-3">
           <div class="card-body">
             <h5 class="card-title">.net Development</h5>
             <p class="card-text">I enjoy writing native desktop apps in c# using .net core</p>
@@ -69,7 +69,7 @@
           </div>
         </div>
         
-      <div class="card text-center text-white bg-dark mb-3" style="min-height: 15rem;">
+      <div class="card text-center text-white bg-dark mb-3">
         <div class="card-body">
           <h5 class="card-title">Certifications</h5>
           <p class="card-text">I hold several industry certifications</p>
