add weather info

--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
     </nav>
 
     <section>
+      <div id="weather" class="jumbotron-fuid bg-dark">
+        
+      </div>
+    </section>
+
+    <section>
       <div class="card-deck" style="width: 100%;padding: 2rem">
         <div class="card text-center text-white bg-dark mb-3">
           <div class="card-body">
